[tool.poetry]
name = "vaping"
version = "1.3.0.1"
description = "vaping is a healthy alternative to smokeping!"
readme = "README.md"
repository = "https://github.com/20c/vaping"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    'Environment :: No Input/Output (Daemon)',
    'Intended Audience :: System Administrators',
    'Intended Audience :: Telecommunications Industry',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Internet',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: System :: Monitoring',
    'Topic :: System :: Networking :: Monitoring',
]

packages = [
    { include = "vaping", from = "src" },
]

[tool.poetry.scripts]
vaping = "vaping.cli:cli"


[tool.poetry.dependencies]
python = "^3.6.2"
pid = "^3"
pluginmgr = "^1"
python-daemon= "^2"
munge = "^1"
confu = "^1.7.1"

# plugins

# graphite
requests = { version = "^2.19.1", optional = true }
graphyte = { version = "^1.4", optional = true }

# rrdtool
rrdtool = { version = ">=0.1.14, <1", optional = true }

# standalone
graphsrv = { version = "^2", optional = true }
vodka = { version = "^3", optional = true }

# whisper
whisper = { version = ">=0.9.15, <2", optional = true }

# zeromq
pyzmq = { version = ">=15.3.0, <19", optional = true }

[tool.poetry.dev-dependencies]
# docs
markdown-include = "^0.6.0"
mkdocs = "^1.1.2"
pymdgen = "^1"

# tests
codecov = "^2.1.10"
coverage = "^5.3"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-filedata = "^0.4.0"
tox = "^3.20.1"

# linting
bandit = "^1.6.2"
black = { version = ">=20", allow-prereleases = true }
isort = "^5.7.0"
flake8 = "^3.8.4"
pre-commit = "^2.13"
pyupgrade = "^2.19.4"
mypy = "^0.812"

[tool.poetry.extras]
graphite = ["graphyte", "requests"]
rrdtool = ["rrdtool"]
standalone = ["graphsrv", "vodka"]
whisper = ["whisper"]
zeromq = ["pyzmq"]

# all extras
all = [
    "graphsrv",
    "graphyte",
    "pyzmq",
    "rrdtool",
    "requests",
    "vodka",
    "whisper",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
